# claude-scrub

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude-scrub  claude-sessions  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/plans/: 2026-03-05-claude-scrub-design.md  2026-03-05-claude-scrub-implementation.md  2026-03-06-pattern-tiers-design.md  2026-03-06-pattern-tiers-plan.md  2026-03-08-open-source-audit.md  2026-03-08-open-source-remediation.md  2026-03-08-ops-readiness-audit.md  2026-03-08-ops-readiness-remediation.md  2026-03-08-pre-launch-checklist.md  2026-03-08-quality-audit.md  2026-03-08-quality-fixes.md  2026-03-08-quality-remediation.md  2026-03-08-security-audit.md  2026-03-08-security-remediation.md
tests/: test_claude_scrub.py
