[project]
name = "claude-scrub"
version = "0.1.0"
description = "Scan and scrub secrets from Claude Code local session data"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
